# simple_survival

./: .gitmodules  CMakeLists.txt
assets/: dummy.png~  items.json  recipes.json
include/: Colors.hpp  CraftingMenu.hpp  DroppedItem.hpp  Dummy.hpp  Entity.hpp  Game.hpp  Inventory.hpp  InventoryEntity.hpp  Item.hpp  Mineable.hpp  Mob.hpp  Player.hpp  Recipe.hpp  Slot.hpp  Tile.hpp  Zombie.hpp  utils.h
include/entities/: DroppedItem.hpp  Simple.hpp
src/: CraftingMenu.cpp  DroppedItem.cpp  Dummy.cpp  Entity.cpp  Game.cpp  Inventory.cpp  InventoryEntity.cpp  Item.cpp  Mineable.cpp  Mob.cpp  Player.cpp  Recipe.cpp  Simple.cpp  Slot.cpp  Tile.cpp  Zombie.cpp  main.cpp
tests/: test.cpp
